# ZucchiniEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  README.md  config.hpp.in  premake5.lua
ZAPI/: premake5.lua
ZAPI/include/: zepch.hpp
ZAPI/include/zapi/: defines.hpp  platform.hpp  zapi.hpp
ZAPI/include/zapi/Backtrace/: CallStack.hpp  Callstack.inl  StackFrame.hpp  StackFrame.inl
ZAPI/include/zapi/Common/: Arguments.hpp  Functor.hpp  Observer.hpp  Priority.hpp  Random.hpp  System.hpp
ZAPI/include/zapi/Core/: Application.hpp  Application.inl  Engine.hpp
ZAPI/include/zapi/Debug/: Assert.hpp  Assert.inl  Tee.hpp
ZAPI/include/zapi/Event/: Event.hpp  Event.inl  EventBus.hpp  EventDispatcher.hpp  EventSubscriber.hpp  EventSubscriber.inl
ZAPI/include/zapi/Exception/: Exception.hpp
ZAPI/src/: defines.cpp
ZAPI/src/Backtrace/: CallStack.cpp  StackFrame.cpp
ZAPI/src/Common/: Arguments.cpp  Random.cpp  System.cpp
ZAPI/src/Core/: Application.cpp
ZAPI/src/Event/: Event.cpp  EventBus.cpp  EventDispatcher.cpp
ZAPI/src/Exception/: Exception.cpp
ZAPI/src/Log/: ConsoleColors.cpp  ConsoleWriter.cpp  DebugFileWriter.cpp  FileWriter.cpp  Logger.cpp
ZAPI/src/Memory/: New.cpp  StandardAllocator.cpp
ZAPI/src/Module/: SharedObject.cpp
ZAPI/src/Time/: Chrono.cpp  Date.cpp  Time.cpp
ZAPI/src/Util/: FileUtils.cpp
ZEngine/: CMakeLists.txt  premake5.lua
ZEngine/include/: zepch.cpp  zepch.hpp
ZEngine/include/inline/Abstract/: Singleton.inl
ZEngine/include/inline/Debug/: Logger.inl
ZEngine/include/zengine/: defines.hpp  platform.hpp  types.hpp  zemacros.hpp  zengine.hpp  zeplatform.hpp
ZEngine/include/zengine/Abstract/: Singleton.hpp  Singleton.inl
ZEngine/include/zengine/Backtrace/: CallStack.hpp  CallStack.inl  StackFrame.hpp  StackFrame.inl
ZEngine/include/zengine/Common/: Arguments.hpp  Console.hpp  Console.inl  Functor.hpp  Observer.hpp  Priority.hpp  Random.hpp  Subscriber.hpp  System.hpp  TypeTraits.hpp
ZEngine/include/zengine/Common/Backtrace/: CallStack.hpp  CallStack.inl  StackFrame.hpp  StackFrame.inl
ZEngine/include/zengine/Core/: Application.hpp  Application.inl  Core.hpp  Core.inl  Engine.hpp  State.hpp
ZEngine/include/zengine/Debug/: Assert.hpp  Assert.inl  Logger.hpp  Logger.inl  Tee.hpp  Tee.inl
ZEngine/include/zengine/Event/: Callback.hpp  CallbackList.hpp  Event.hpp  Event.inl  EventBus.hpp  EventBus.inl  EventDispatcher.hpp  EventDispatcher.inl  EventHandler.hpp  EventHandler.inl  EventSubscriber.hpp  EventSubscriber.inl  Subscriber.hpp  Subscriber.inl
ZEngine/include/zengine/Exception/: Exception.hpp  Exception.inl
ZEngine/include/zengine/Layer/: Layer.hpp
ZEngine/include/zengine/Layers/: Layer.hpp  Layer.inl
ZEngine/include/zengine/Log/: ConsoleColors.hpp  ConsoleWriter.hpp  ConsoleWriter.inl  DebugFileWriter.hpp  FileWriter.hpp  FileWriter.inl  LogLevels.hpp  Logger.hpp  Logger.inl  StreamWriter.hpp  StreamWriter.inl  Writer.hpp
ZEngine/include/zengine/Math/: Angle.hpp  Angle.inl  Math.hpp  RangedNumeric.hpp  RangedNumeric.inl
ZEngine/include/zengine/Memory/: Allocator.hpp  DefaultAllocator.hpp  Memory.hpp  MemoryAllocator.hpp  MemoryManager.hpp  MemoryTracker.hpp  MemoryTracker.inl  New.hpp  New.inl  NewOff.hpp  StandardAllocator.hpp  StandardAllocator.inl
ZEngine/include/zengine/Module/: SharedObject.hpp
ZEngine/include/zengine/Resource/: ResourceHolder.hpp  ResourceHolder.inl  ResourceManager.hpp  ResourceManager.inl
ZEngine/include/zengine/Signal/: Connection.hpp  Connection.inl  Listener.hpp  Listener.inl  Signal.hpp  Signal.inl
ZEngine/include/zengine/Stream/: FileOutputStream.hpp  FileOutputStream.inl  OutputStream.hpp
ZEngine/include/zengine/Time/: Chrono.hpp  Chrono.inl  Date.hpp  Date.inl  Time.hpp  Time.inl
ZEngine/include/zengine/Util/: FileUtils.hpp  StringUtils.hpp  StringUtils.inl
ZEngine/src/: defines.cpp  main.cpp
ZEngine/src/Backtrace/: CallStack.cpp  StackFrame.cpp
ZEngine/src/Common/: Arguments.cpp  Console.cpp  Random.cpp  System.cpp
ZEngine/src/Common/Backtrace/: CallStack.cpp  StackFrame.cpp
ZEngine/src/Core/: Application.cpp  Core.cpp  State.cpp
ZEngine/src/Debug/: Assert.cpp  Logger.cpp
ZEngine/src/Event/: Event.cpp  EventBus.cpp  EventDispatcher.cpp
ZEngine/src/Exception/: Exception.cpp
ZEngine/src/Layer/: Layer.cpp
ZEngine/src/Layers/: Layer.cpp
ZEngine/src/Log/: ConsoleColors.cpp  ConsoleWriter.cpp  DebugFileWriter.cpp  FileWriter.cpp  LogLevels.cpp  Logger.cpp  StreamWriter.cpp
ZEngine/src/Math/: Angle.cpp  Math.cpp
ZEngine/src/Memory/: DefaultAllocator.cpp  Memory.cpp  MemoryManager.cpp  MemoryTracker.cpp  New.cpp  StandardAllocator.cpp
ZEngine/src/Module/: SharedObject.cpp
ZEngine/src/Stream/: FileOutputStream.cpp
ZEngine/src/Time/: Chrono.cpp  Date.cpp  Time.cpp
ZEngine/src/Util/: BacktraceUtils.cpp  FileUtils.cpp
ZEngineAPI/: premake5.lua
ZEngineAPI/include/zengine/: defines.hpp  platform.hpp  zengine.hpp
ZEngineAPI/src/: defines.cpp
ZEngineAPI/src/Backtrace/: CallStack.cpp
ZEngineAPI/src/Common/: Arguments.cpp  Random.cpp  System.cpp
ZEngineAPI/src/Core/: Application.cpp  Core.cpp
ZEngineAPI/src/Exception/: Exception.cpp
ZEngineAPI/src/Log/: ConsoleColors.cpp  ConsoleWriter.cpp  DebugFileWriter.cpp  FileWriter.cpp  Logger.cpp
ZEngineAPI/src/Module/: SharedObject.cpp
ZEngineAPI/src/Util/: FileUtils.cpp
include/: zebuild.hpp  zepch.hpp
include/inline/Core/: Core.inl
include/inline/Debug/: Tee.inl
include/inline/Event/: CallbackList.inl  EventBus.inl  EventDispatcher.inl
include/inline/Math/: RangedNumeric.inl
include/inline/Time/: Chrono.inl  Date.inl
include/zengine/Common/: Priority.hpp  System.hpp  TypeTraits.hpp
include/zengine/Debug/: Logger.hpp  Tee.hpp
include/zengine/Event/: CallbackList.hpp  Event.hpp  EventBus.hpp  EventDispatcher.hpp
include/zengine/Memory/: UndefNew.hpp
include/zengine/Time/: Chrono.hpp
src/Common/: Random.cpp
src/Core/: Core.cpp  State.cpp
src/Debug/: Assert.cpp
src/Event/: EventBus.cpp  EventDispatcher.cpp
src/Memory/: MemoryManager.cpp
(+53 files in other folders)
