CMAKE_MINIMUM_REQUIRED(VERSION 3.20 FATAL_ERROR)

PROJECT(ZEngine
        VERSION 0.20.1
        HOMEPAGE_URL https://github.com/AarnoldGad/ZucchiniEngine.git
        LANGUAGES CXX
        )

SET(ZEngine_VERSION_STAGE "a")

MESSAGE(STATUS "Configuring ZucchiniEngine ${ZEngine_VERSION_MAJOR}-${ZEngine_VERSION_MINOR}.${ZEngine_VERSION_PATCH}${ZEngine_VERSION_STAGE}")

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")

SET(CMAKE_DEBUG_POSTFIX -d)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

CONFIGURE_FILE(config.hpp.in config.hpp @ONLY NEWLINE_STYLE LF)

ADD_SUBDIRECTORY(ZEngine)

