CMAKE_MINIMUM_REQUIRED(VERSION 3.20 FATAL_ERROR)

PROJECT(ZucchiniEngine
        VERSION 0.20.1
        HOMEPAGE_URL https://github.com/AarnoldGad/ZucchiniEngine.git
        LANGUAGES C CXX
        )

SET(CMAKE_CONFIGURATION_TYPES Release Debug)

SET(ZucchiniEngine_VERSION_STAGE "a")
SET(ZucchiniEngine_VERSION_DAY 23)
SET(ZucchiniEngine_VERSION_MONTH 10)
SET(ZucchiniEngine_VERSION_YEAR 21)

MESSAGE(STATUS "Configuring ZucchiniEngine ${ZucchiniEngine_VERSION_MAJOR}-${ZucchiniEngine_VERSION_MINOR}.${ZucchiniEngine_VERSION_PATCH}${ZucchiniEngine_VERSION_STAGE} of ${ZucchiniEngine_VERSION_DAY}/${ZucchiniEngine_VERSION_MONTH}/${ZucchiniEngine_VERSION_YEAR}")

FIND_PACKAGE(Threads REQUIRED)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}")

SET(CMAKE_DEBUG_POSTFIX -d)

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

CONFIGURE_FILE(config.hpp.in zeconfig.hpp @ONLY NEWLINE_STYLE LF)

# Deps
ADD_SUBDIRECTORY(ZEngine/deps/fmt)
ADD_SUBDIRECTORY(ZEngine/deps/backward-cpp)

ADD_SUBDIRECTORY(ZEngine)

